fixed image preview vertical align

--- a/www/css/common/preview.css
+++ b/www/css/common/preview.css
@@ -2,17 +2,13 @@
     line-height: 18px;
 }
 .preview > audio,
-.preview > video {
-    vertical-align: middle;
-    max-width: 100%;
-    max-height: 140px;
-}
-
+.preview > video,
 .preview > .imageProgress,
 .preview > .imageProgress > img {
     position: relative;
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
     max-width: 100%;
-    max-height: 150px;
+    max-height: 140px;
+    line-height: 0;
 }
